...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="xsb-Xc-1Qa" id="qGO-ss-Wal"/>
                            <outlet property="delegate" destination="xsb-Xc-1Qa" id="Zub-iX-X6k"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shakespeare" id="6Qf-SQ-udA"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="IKf-ze-xZO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1095.2" y="113.79310344827587"/>
        </scene>
        <!--Navigation Controller-->
...
